Fixed z-index on cards

--- a/art/static/style.css
+++ b/art/static/style.css
@@ -218,7 +218,7 @@ hr {
 .card:hover {
     box-shadow: 5px 3px 3px lightgray;
     transform: scale(1.1);
-    z-index: 3;
+    z-index: 90;
 }
 
 .card-body {
